# adhd-app

./: .gitignore  setup.py  setup.sh
adhd_app/: .env  Cargo.toml
adhd_app/migrations/2023-11-21-010012_create_recipes/: up.sql
adhd_app/src/: lib.rs  main.rs  models.rs  schema.rs
adhdapp_rs_db/: docker-compose.yml
