[package]
name = "adhd_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
bcrypt = "0.15.0"
serde = "1.0.192"
serde_json = "1.0.108"
uuid = "1.6.1"

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]